--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="#home" class="logo">TJR Enterprises</a>
-            <img src="{114AFB69-FA3A-4212-AB0A-976870581BC6}.png" alt="Description of the image">
+            <img src="{114AFB69-FA3A-4212-AB0A-976870581BC6}-modified.png" alt="Description of the image">
             <ul>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
