--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-text">
-                <h1>TJR Enterprises: Custom Design & Fabrication</h1>
+                <h1>                        Custom Design & Fabrication</h1>
                 <p>From concept to creation, we bring your ideas to life with expert CAD design, fabrication, and finishing. Leverage our skills to bring your idea to reality</p>
                 <a href="#projects" class="cta-button">View Our Work</a>
             </div>
